# cg-tp1

./: AppManager.cpp  AppManager.h  AxisVector.h  Bird.cpp  Bird.h  Boid.cpp  Boid.h  CMakeLists.txt  Exception.cpp  Exception.h  FalcoPeregrinus.cpp  FalcoPeregrinus.h  Floor.cpp  Floor.h  Graphical.cpp  Graphical.h  HasGraphicalRepresentation.cpp  HasGraphicalRepresentation.h  ModelViewProjection.cpp  ModelViewProjection.h  ObjLoader.cpp  ObjLoader.h  OpenGLUtil.cpp  OpenGLUtil.h  Position.cpp  Position.h  README.md  Scene.cpp  Scene.h  Tower.cpp  Tower.h  TransformMatrix.cpp  TransformMatrix.h  Util.cpp  Util.h  main.cpp  shader.frag  shader.vert
tests/: SceneTest.cpp
